[package]
name = "cymrust"
version = "0.3.3"
authors = [ "Ossi Herrala <devel@hownetworks.io>" ]

description = "Query Team Cymru's IP-to-ASN mapping via DNS"
keywords = [ "ip", "network", "bgp", "resolver", "cymru" ]
homepage = "https://github.com/HowNetWorks/cymrust#readme"
repository = "https://github.com/HowNetWorks/cymrust"
documentation = "https://docs.rs/cymrust/"
readme = "README.md"

license = "MIT"

exclude = [ ".gitignore", "circle.yml" ]

[dependencies]
chrono = "0.3.0"
resolve = "0.1.2"
