[package]
name = "cymrust"
version = "0.3.4"
authors = [ "Ossi Herrala <devel@hownetworks.io>" ]

description = "Query Team Cymru's IP-to-ASN mapping via DNS"
keywords = [ "ip", "network", "bgp", "resolver", "cymru" ]
categories = [ "api-bindings" ]
homepage = "https://github.com/HowNetWorks/cymrust#readme"
repository = "https://github.com/HowNetWorks/cymrust"
documentation = "https://docs.rs/cymrust/"
readme = "README.md"

license = "MIT"

exclude = [ ".gitignore", "circle.yml" ]

[[example]]
name = "whois"

[dependencies]
chrono = "0.4.0"
resolve = "0.1.2"
